--- a/TopDucks/index.html
+++ b/TopDucks/index.html
@@ -46,14 +46,14 @@
 
               
               <div class="header-right">
-                <a href="../About/index.html">About</a>
-                <a href="../Prices/index.html">Prices</a>
-                <a href="../TopDucks/index.html">Top Ducks</a>
-                <a href="../Donate/index.html">Donate🦆</a>
+                <a href="/About">About</a>
+                <a href="/Prices">Prices</a>
+                <a href="https://roblox.com">Top Ducks</a>
+                <a href="/Donate">Donate🦆</a>
 
               </div>
               <div class="header-left">
-                <a href="../Main/index.html">Back</a>
+                <a href="../#">Back</a>
 
 
             </div>
