--- a/TopDucks/index.html
+++ b/TopDucks/index.html
@@ -46,10 +46,10 @@
 
               
               <div class="header-right">
-                <a href="/About">About</a>
-                <a href="/Prices">Prices</a>
-                <a href="https://roblox.com">Top Ducks</a>
-                <a href="/Donate">Donate🦆</a>
+                <a href="../About">About</a>
+                <a href="../Prices">Prices</a>
+                <a href="#">Top Ducks</a>
+                <a href="../Donate">Donate🦆</a>
 
               </div>
               <div class="header-left">
