--- a/Prices/index.html
+++ b/Prices/index.html
@@ -46,10 +46,14 @@
 
               
               <div class="header-right">
-                <a href="../About/index.html">About</a>
-                <a href="">Prices</a>
-                <a href="../TopDucks/index.html">Top Ducks</a>
-                <a href="../Donate/index.html">Donate🦆</a>
+                <a href="../About">About</a>
+                <a href="#">Prices</a>
+                <a href="../TopDucks">Top Ducks</a>
+                <a href="../Donate">Donate🦆</a>
+
+              </div>
+              <div class="header-left">
+                <a href="../#">Back</a>
 
               </div>
               <div class="header-left">
