--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link
           rel="shortcut icon"
           type="image/png"
-          href="../Images/duckLogo.png"
+          href="./Images/duckLogo.png"
         />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -17,7 +17,7 @@
         <meta name="author" content="Ersi Perez" />
         <meta
           property="og:image"
-          content="../Images/duckLogo.png"
+          content="./Images/duckLogo.png"
         />
         <meta property="og:url" content="" />
         <meta name="theme-color" content="#ecee65" />
@@ -57,7 +57,7 @@
     
 
 
- <center><img draggable="false" src="../Images/duckMain.png" alt="centered image" height="300" width="300"> </center>
+ <center><img draggable="false" src="./Images/duckMain.png" alt="centered image" height="300" width="300"> </center>
 
 
   <!-- BODY -->
