--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           property="og:image"
           content="./Images/duckLogo.png"
         />
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="https://ducks.tk/" />
         <meta name="theme-color" content="#ecee65" />
         <title>
           Ducks
