--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     <p1>We are the organization of ducks. We know all there is to know about ducks.</p1>
     
     </div>
-
+    
+    <div>
+    <a class="btn btn-primary btn-lg"  href="https://discord.gg/uBFxsYU8ka" target="_blank" role="button">Meet Luck Lovers</a>
+</div>
 </body>
 
   <!-- FOOTER -->
