--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <title>Ducks</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682606987915540"
+  crossorigin="anonymous"></script>
 
   <!--
     - favicon
@@ -30,8 +32,13 @@
     </html>
         <body style="background-color:#ecee65;">
 
+
+
+
+          
   <!-- HEADER -->
 
+  
           <head>
             <div class="header">
               <div class="header-middle">
