--- a/About/index.html
+++ b/About/index.html
@@ -76,7 +76,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">World Of Ducks</h2>
+          <h2 class="h2 article-title">World Of Ducks ~ About</h2>
             <center><img draggable="false" src="../assets/Images/duckMain.png" alt="centered image" height="300" width="300"> </center>
 
   
