--- a/TopDucks/index.html
+++ b/TopDucks/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="https://ducks.tk/" />
-
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682606987915540"
      crossorigin="anonymous"></script>
   <title>Ducks</title>
@@ -14,12 +12,12 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/Images/duckLogo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/Images/duckLogo.png" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 
   <!--
     - google font link
@@ -56,11 +54,11 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a class="navbar-link" href="About">About</a>
+            <a class="navbar-link" href="../About">About</a>
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link" href="TopDucks">Top Ducks</a>
+            <a class="navbar-link" href="../#">Back</a>
           </li>
 
         </ul>
@@ -78,8 +76,8 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">World Of Ducks</h2>
-            <center><img draggable="false" src="./assets/Images/duckMain.png" alt="centered image" height="300" width="300"> </center>
+          <h2 class="h2 article-title">World Of Ducks ~ Top Ducks</h2>
+            <center><img draggable="false" src="../assets/Images/duckMain.png" alt="centered image" height="300" width="300"> </center>
 
   
         </header>
@@ -92,35 +90,10 @@
 
         <section class="main">
 
-          <h3 class="h3 main-title">Who Are We?</h3>
-          <h3 class="p1 main-text">We are a community of duck lovers that are always fasinated to learn the most we can about ducks and their life style.</h3>
+          <h3 class="h3 main-title">Our Goal</h3>
+          <h3 class="p1 main-text">Our goal is to inform people about ducks and spread awareness about them.We want to better the lifes for all ducks in the world.</h3>
 
 
-          <ul class="main-list">
-
-
-
-            <a class="main-item" href="About" target="_blank" rel="noopener noreferrer">
-
-            
-
-
-              <div class="main-content-box">
-                <h4 class="h4 main-item-title">Learn More</h4>
-
-                <p class="main-item-text">
-                  Learn about the top ducks in the world.
-                </p>
-              </div>
-
-            </a>
-
-
-
-            </li>
-
-            
-          </ul>
 
         </section>
  
@@ -199,7 +172,6 @@
 
 
 
-
     </div>
 
   </main>
@@ -212,7 +184,7 @@
   <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="../assets/js/script.js"></script>
 
   <!--
     - ionicon link
