--- a/About/index.html
+++ b/About/index.html
@@ -58,7 +58,7 @@
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link" href="TopDucks">Top Ducks</a>
+            <a class="navbar-link" href="../TopDucks">Top Ducks</a>
           </li>
 
         </ul>
