--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
 
-            <a class="main-item" href="About" target="_blank" rel="noopener noreferrer">
+            <a class="main-item" href="About" rel="noopener noreferrer">
 
             
 
