--- a/About/index.html
+++ b/About/index.html
@@ -100,7 +100,7 @@
 
 
 
-            <a class="main-item" href="About" rel="noopener noreferrer">
+            <a class="main-item" href="../Privacy" rel="noopener noreferrer">
 
             
 
