--- a/Privacy/index.html
+++ b/Privacy/index.html
@@ -61,7 +61,7 @@
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link" href="../TopDucks">Top Ducks</a>
+            <a class="navbar-link" href="../DuckDetails">Duck Information</a>
           </li>
 
         </ul>
