--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link" href="TopDucks">Top Ducks</a>
+            <a class="navbar-link" href="DuckDetails">Duck Information</a>
           </li>
 
         </ul>
