--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
           <h3 class="h3 main-title">Who Are We?</h3>
           <h3 class="p1 main-text">We are a community of duck lovers that are always fasinated to learn the most we can about ducks and their life style.</h3>
 
+          <h3 class="h3 main-title">Whats our purpose?</h3>
+          <h3 class="p1 main-text">Our purpose as a server is to inform the world about ducks and all about them and their habitats.</h3>
 
           <ul class="main-list">
 
