--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
 
             <a class="main-item" href="About" rel="noopener noreferrer">
 
-            
-
-
               <div class="main-content-box">
                 <h4 class="h4 main-item-title">Learn More</h4>
 
@@ -113,7 +110,17 @@
               </div>
 
             </a>
+            <a class="main-item" href="DuckGame/" rel="noopener noreferrer">
 
+              <div class="main-content-box">
+                <h4 class="h4 main-item-title">Duck Hunt</h4>
+
+                <p class="main-item-text">
+                  Play a game where you hunt for ducks.
+                </p>
+              </div>
+
+            </a>
 
 
             </li>
