--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
               </div>
             </div>
           </li>
+          <li class="navbar-item">
+            <div class=" dropdown">
+              <img id="imgClickAndChange" onclick="langChange()" class="profile" alt="profile photo" src="./assets/Images/profile.png" draggable="false">
+              <div class="dropdown-content">
+                <a class="navbar-link" href="#">Profile</a>
+                <a class="navbar-link" href="#">Settings</a>
+                <a class="navbar-link" href="#">Log Out</a>
+              </div>
+            </div>
+          </li>
+
 
         </ul>
 
